gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: default
spec:
  # hostnames:
  #   - nginx.example.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: prod-web
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nginx
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
